--- a/src/components/h.html
+++ b/src/components/h.html
@@ -1,6 +1,6 @@
 <import type='js' src='./src/js/hello.js'></import>
 <import type='css' fixed src='./src/css/GoodByeWorld.css'></import>
 <import type='components' src='HelloWorld'></import>
-<h1 --click="this.send()">{{this.a}}</h1>
+<h1 --mouseleave="this.send()" --mouseenter="this.send()" --click="this.send()">{{this.a}}</h1>
 <h1 --click="this.send()">{{this.b}}</h1>
 <HelloWorld></HelloWorld>
